# struetype

./: .gitignore  CMakeLists.txt  README.md  debug_test  stb_truetype.h  struetype.h  ttftest  ttftest.c
CVE-2020-6617/: CMakeLists.txt
CVE-2020-6618/: CMakeLists.txt  poc
CVE-2020-6619/: CMakeLists.txt  ttfuzz.c
CVE-2020-6620/: CMakeLists.txt  poc
CVE-2020-6621/: CMakeLists.txt
CVE-2020-6622/: CMakeLists.txt
CVE-2020-6623/: CMakeLists.txt  ttfuzz.c
CVE-2022-25514/: CMakeLists.txt  NOTES
CVE-2022-25515/: CMakeLists.txt  NOTES
CVE-2022-25516/: CMakeLists.txt  NOTES  ttftest.c
build_compressed/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_compressed/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  genpng_compressed
build_compressed/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6617/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6618/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6619/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6620/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6621/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6622/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2020-6623/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2022-25514/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2022-25515/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_compressed/tests/CVE-2022-25516/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_uncompressed/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  genpng
build_uncompressed/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6617/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6618/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6619/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6620/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6621/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6622/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2020-6623/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2022-25514/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2022-25515/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_uncompressed/tests/CVE-2022-25516/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/: CMakeLists.txt  foview.cpp  genpng.c  pdfimg.h  pdfimg.hpp  profont_embedded.h
examples/fonts/: CMakeLists.txt
examples/fonts/unifont/SIL/: OFL.txt
tests/: CMakeLists.txt  ttftest.c
tests/CVE-2020-6617/: CMakeLists.txt  poc
tests/CVE-2020-6618/: CMakeLists.txt
tests/CVE-2020-6619/: poc
tests/CVE-2020-6621/: poc
tests/CVE-2020-6622/: CMakeLists.txt  poc
tests/CVE-2020-6623/: CMakeLists.txt  poc  ttfuzz.c
tests/CVE-2022-25514/: CMakeLists.txt  poc
tests/CVE-2022-25515/: poc
tests/CVE-2022-25516/: poc
